--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-¡¡¡¡layout: default
-¡¡¡¡title: ÎÒµÄBlog
-¡¡¡¡---
-¡¡¡¡<h2>{{ page.title }}</h2>
-¡¡¡¡<p>×îÐÂÎÄÕÂ</p>
-¡¡¡¡<ul>
-¡¡¡¡¡¡¡¡{% for post in site.posts %}
-¡¡¡¡¡¡¡¡¡¡¡¡<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-¡¡¡¡¡¡¡¡{% endfor %}
-¡¡¡¡</ul>
+ï¿½ï¿½ï¿½ï¿½layout: default
+ï¿½ï¿½ï¿½ï¿½title: ï¿½Òµï¿½Blog
+---
+ï¿½ï¿½ï¿½ï¿½<h2>{{ page.title }}</h2>
+ï¿½ï¿½ï¿½ï¿½<p>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½</p>
+ï¿½ï¿½ï¿½ï¿½<ul>
+ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½{% for post in site.posts %}
+ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½{% endfor %}
+ï¿½ï¿½ï¿½ï¿½</ul>
