--- a/_posts/2012-08-25-hello-world.html
+++ b/_posts/2012-08-25-hello-world.html
@@ -1,7 +1,7 @@
 ---
-　　layout: default
-　　title: 你好，世界
-　　---
-　　<h2>{{ page.title }}</h2>
-　　<p>我的第一篇文章</p>
-　　<p>{{ page.date | date_to_string }}</p>
+layout: default
+title: 锟斤拷锟矫ｏ拷锟斤拷锟斤拷
+---
+<h2>{{ page.title }}</h2>
+<p>锟揭的碉拷一篇锟斤拷锟斤拷</p>
+<p>{{ page.date | date_to_string }}</p>
