--- a/_posts/2012-08-25-hello-world.html
+++ b/_posts/2012-08-25-hello-world.html
@@ -3,5 +3,5 @@ layout: default
 title:my world
 ---
 <h2>{{ page.title }}</h2>
-<p>这是第一篇博文</p>
+<p>不支持中文吗</p>
 <p>{{ page.date | date_to_string }}</p>
