--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: my blog
 ---
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <h2>{{ page.title }}</h2>
 <p>世界你好</p>
 <ul>
